# invoke-ai-reports

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/routers/: settings.py  stats.py  sync.py  users.py  validate.py
backend/services/: analytics.py  importer.py  prompt_analyzer.py
docs/superpowers/plans/: 2026-03-15-backend-foundation.md  2026-03-15-frontend-foundation.md
docs/superpowers/specs/: 2026-03-15-invokeai-reports-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ChartCard.tsx  Layout.tsx  StatCard.tsx  TopBar.tsx
frontend/src/context/: FilterContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: GenerationPage.tsx  ModelsPage.tsx  OverviewPage.tsx  PromptsPage.tsx  SettingsPage.tsx  SetupPage.tsx  TrendsPage.tsx
tests/: conftest.py  test_analytics.py  test_config.py  test_importer.py  test_models.py  test_prompt_analyzer.py  test_settings_router.py  test_stats_router.py  test_sync_router.py  test_users_router.py  test_validate_router.py
